sample/msvc/error/c2033b.cpp
// C2033b.cpp
struct S {
   int b[2] : 1;  // C2033
};
